# flutter_rust

./: Cargo.toml  README.md  build.rs  flutter_interface.dart  voice_assistant_screen.dart
src/: ffi.rs  lib.rs  main.rs
