[package]
name = "flutter_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "flutter_rust"
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
cbindgen = "0.24"
